test_programs/compile_failure/quote_at_runtime/src/main.nr
fn main() {
    foo(quote { test })
}

fn foo(q: Quoted) {
    println(q);
}
